<resources>
    <string name="app_name">CNC Carving Factory</string>

    <string name="dummy_button">dummy_button</string>
    <string name="clear" >clear</string>
    <string name="Undo" >undo</string>
    <string name="color" >color</string>
    <string name="alpha" >pick an alpha value</string>
    <string name="set" >set</string>
    <string name="cancel" >cancel</string>
    <string name="settings" >settings</string>
    <string name="select_dimensions">select length and width</string>
    <string name="pref_width">set stock width (y axis)</string>
    <string name="pref_length">set stock length (x axis)</string>
    <string name="pref_depth">set stock depth (z axis)</string>
</resources>
