<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_width"
        android:title="@string/pref_width"
        android:defaultValue="24" />
    <EditTextPreference
        android:key="pref_length"
        android:title="@string/pref_length"
        android:defaultValue="48" />
    <EditTextPreference
        android:key="pref_depth"
        android:title="@string/pref_depth"
        android:defaultValue="0.5" />
    <com.labgmail.pomona.greenberg.cnccarvingfactory.NumberPickerPreference
        android:key="pref_wLength"
        android:title="select length"
        android:defaultValue="24"/>
    <com.labgmail.pomona.greenberg.cnccarvingfactory.NumberPickerPreference
        android:key="pref_wWidth"
        android:title="select width"
        android:defaultValue="24"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_inch"
        android:title="inches" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_feet"
        android:title="feet" />
</PreferenceScreen>